# game.moonlight

./: .gitignore  .gitmodules  CMakeLists.txt  FindTinyXML.cmake  Readme.md
game.moonlight/: addon.xml
game.moonlight/resources/: settings.xml
game.moonlight/resources/language/English/: strings.po
src/: MoonlightClient.cpp  MoonlightClient.h  MoonlightEnvironment.cpp  MoonlightEnvironment.h  Preferences.cpp  Preferences.h  Resolution.cpp  Resolution.h  addon.cpp  main.cpp
src/callbacks/: AudioCallbacks.cpp  Callbacks.h  ConnectionCallbacks.cpp  VideoCallbacks.cpp
src/input/: InputManager.cpp  InputManager.h
src/log/: ILog.h  Log.cpp  Log.h  LogAddon.cpp  LogAddon.h  LogConsole.cpp  LogConsole.h  LogSyslog.cpp  LogSyslog.h
src/nvstream/: CertKeyPair.cpp  CertKeyPair.h  NvApp.cpp  NvApp.h  NvHTTP.cpp  NvHTTP.h  PairingManager.cpp  PairingManager.h  http.c  http.h
src/settings/: Preferences.cpp  Preferences.h  PreferencesManager.h  Resolution.cpp  Resolution.h  Settings.cpp  Settings.h
src/utils/: CommonMacros.h
